--- a/preprocessing/config/config.yaml
+++ b/preprocessing/config/config.yaml
@@ -1,21 +1,23 @@
 ---
 apis:
-  camera_group: "http://localhost:8000/getCameraGroup"
-  preprocess_config: "http://localhost:8000/getCameraGroup"
-  schedule_config: "http://localhost:8000/getCameraConfig"
-  postprocess_config: "http://localhost:8000/getpostprocess"
-  usecase_urls: "http://localhost:8000/getusecase"
-  classes: "http://localhost:8000/getclasses"
-  computation: "http://localhost:8000/getcomputation"
-  incidents: "http://localhost:8000/getincidents"
-  boundary_config: "http://localhost:8000/getboundary"
+  camera_group: "http://172.16.0.204:8051/getCameraGroup"
+  preprocess_config: "http://172.16.0.204:8051/getCameraGroup"
+  schedule_config: "http://172.16.0.204:8051/getCameraConfig"
+  postprocess_config: "http://172.16.0.204:8051/getpostprocess"
+  usecase_urls: "http://172.16.0.204:8051/getusecase"
+  classes: "http://172.16.0.204:8051/getclasses"
+  computation: "http://172.16.0.204:8051/getcomputation"
+  incidents: "http://172.16.0.204:8051/getincidents"
+  boundary_config: "http://172.16.0.204:8051/getboundary"
+  schedule_master: "http://172.16.0.204:8051/getScheduleMaster"
+  preprocess_config: "http://172.16.0.204:8051/getPreprocessConfig"
 
 kafka:
   - 172.16.0.175:9092
   - 172.16.0.171:9092
   - 172.16.0.174:9092
 
-readConfig: true
+readConfig: False
 config:
   customer:
     - 1
