--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,16 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.9,<3.11"
+opencv-python = "^4.8.1.78"
+numpy = "^1.26.1"
+pandas = "^2.1.1"
+kafka-python = "^2.0.2"
+scipy = "^1.11.3"
+redis = "^5.0.1"
+shared-memory-dict = "^0.7.2"
+six = "^1.16.0"
+pillow = "^10.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
