--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,9 @@ redis = "^5.0.1"
 shared-memory-dict = "^0.7.2"
 six = "^1.16.0"
 pillow = "^10.1.0"
-python-consul = "^1.1.0"
+python-consul = "1.1.0"
 pyyaml = "^6.0.1"
+console-logging = "^0.0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
